Fix T45933: Can't select scaled camera in camera view